--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -41,6 +41,8 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.33",
     "typescript": "^5.0.0"
   }
 }
