--- a/starter-app/package.json
+++ b/starter-app/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "mm-design-system": "file:../design-system",
     "next": "^14.2.18",
     "next-themes": "^0.4.6",
